# bcl

./: .clangd  .gitignore  README.md  compile.bat
docs/: Doxyfile
docs/html/: alloca_8h_source.html  annotated.html  annotated_dup.js  assert_8h_source.html  bit_8h_source.html  bldefines_8h_source.html  classbcl_1_1dense__table-members.html  classbcl_1_1dense__table.html  classbcl_1_1dense__table.js  classbcl_1_1fixed__vector-members.html  classbcl_1_1fixed__vector.html  classbcl_1_1freelist.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__bitvector_00_01___traits_01_4-members.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__bitvector_00_01___traits_01_4.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__bitvector_00_01___traits_01_4.js  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__linkedlist_00_01___traits_01_4-members.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__linkedlist_00_01___traits_01_4.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__stack_00_01___traits_01_4-members.html  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__stack_00_01___traits_01_4.html  classbcl_1_1inline__vector-members.html  classbcl_1_1inline__vector.html  classbcl_1_1page__vector.html  classbcl_1_1pool-members.html  classbcl_1_1pool.html  classbcl_1_1tag__ptr-members.html  classbcl_1_1tag__ptr.html  classbcl_1_1virtual__allocator-members.html  classbcl_1_1virtual__allocator.html  classbl_1_1_flat_map-members.html  classbl_1_1_flat_map.html  classbl_1_1_flat_map.js  classbl_1_1_flat_map_1_1iterator-members.html  classbl_1_1_flat_map_1_1iterator.html  classbl_1_1_heap_array-members.html  classbl_1_1_heap_array.html  classbl_1_1_linear_alloc-members.html  classbl_1_1_linear_alloc.html  classbl_1_1_sparse_array-members.html  classbl_1_1_sparse_array.html  classbl_1_1sk_freelist-members.html  (+44 more)
docs/html/search/: all_11.js  all_3.js  all_6.js  all_7.js  all_8.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  (+12 more)
docs/latex/: alloca_8h_source.tex  annotated.tex  assert_8h_source.tex  bit_8h_source.tex  bldefines_8h_source.tex  classbcl_1_1dense__table.tex  classbcl_1_1fixed__vector.tex  classbcl_1_1freelist.tex  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__bitvector_00_01___traits_01_4.tex  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__linkedlist_00_01___traits_01_4.tex  classbcl_1_1freelist_3_01___size_00_01__freelist__traits_1_1__stack_00_01___traits_01_4.tex  classbcl_1_1inline__vector.tex  classbcl_1_1page__vector.tex  classbcl_1_1pool.tex  classbcl_1_1tag__ptr.tex  classbcl_1_1virtual__allocator.tex  classbl_1_1_flat_map.tex  classbl_1_1_flat_map_1_1iterator.tex  classbl_1_1_heap_array.tex  classbl_1_1_linear_alloc.tex  classbl_1_1_sparse_array.tex  classbl_1_1sk_freelist.tex  classring__buffer.tex  densetable_8h_source.tex  features_8h_source.tex  files.tex  flatmap_8h_source.tex  freelist_8h_source.tex  heaparray_8h_source.tex  hierarchy.tex  linearallocator_8h_source.tex  memory_8h_source.tex  pool_8h_source.tex  refman.tex  ringbuffer_8h_source.tex  sparsearray_8h_source.tex  structbcl_1_1__freelist__traits.tex  structbcl_1_1__freelist__traits_1_1__bitvector.tex  structbcl_1_1__freelist__traits_1_1__linkedlist.tex  structbcl_1_1__freelist__traits_1_1__stack.tex  (+4 more)
src/: CMakeLists.txt  linearallocator.cpp  mem.cpp  scratchallocator.cpp  virtualallocator.cpp
src/bl/: vector.h
src/bl/internals/: defines.h
src/include/bcl/: defines.h  features.h
src/include/bcl/containers/: bitset.h  bucket.h  cache.h  densetable.h  freelist.h  span.h  string.h  tagptr.h  vector.h
src/include/bcl/memory/: bkmemory.h  linearallocator.h  localallocator.h  memory.h  virtualallocator.h
src/include/bcl/sys/: intrinw.h
src/include/bl/: assert.h  bldefines.h  features.h
src/include/bl/containers/: densetable.h  flatmap.h  freelist.h  heaparray.h  pool.h  ringbuffer.h  sparsearray.h  tagptr.h  vector.h
src/include/bl/memory/: linearallocator.h  memory.h  scratchallocator.h  virtualallocator.h
test/: flatmap_test.h  test.cpp
test/headers/: bucket_test.h  densetable_test.h  freelist_test.h  linearallocator_test.h  localallocator_test.h  orphan.h  pool_test.h  tagptr_test.h  test.h  vector_test.h
